# supernode-server

./: .dockerignore  .env.development  .env.production  .eslintrc.js  .gitignore  Dockerfile  appconfig.example.yaml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build-image.yaml
deploy/docker-compose/: docker-compose.yaml
deploy/kubernetes/: config-map.yaml  deployment.yaml  pv.yaml  pvc.yaml  secret.yaml  service-udp.yaml  service-web.yaml
doc/: Contributor.md  n2n.drawio
native/: CMakeLists.txt
native/src/: exports.cc  n2n.cc  sn_utils.cc  sn_utils.h  supernode.cc  supernode.h  thread.h
scripts/: build-native.mjs
src/: app.module.ts  main.ts  native.ts
src/auth/jwt/: jwt.module.ts  jwt.strategy.ts
src/auth/local/: local.controller.ts  local.module.ts  local.service.ts  local.strategy.ts
src/auth/oidc/: oidc.controller.ts  oidc.module.ts  oidc.service.ts  oidc.strategy.ts
src/auth/session/: session.serializer.ts
src/common/filters/: request.exception.filter.ts
src/common/guards/: administration.guard.ts  authenticated.guard.ts  local-auth.guard.ts  oidc.guard.ts
src/common/interceptors/: transform.interceptor.ts
src/common/middlewares/: user.middleware.ts
src/common/pipes/: validation.pipe.ts
src/config/: database.config.ts
src/constants/: exception.constant.ts  log-level.constant.ts
src/modules/audit/: audit.controller.ts  audit.entity.ts  audit.module.ts  audit.service.ts
src/modules/audit/dtos/: create-audit.dto.ts
src/modules/audit/entities/: audit.entity.ts
src/modules/auth/oidc/: oidc.controller.ts  oidc.module.ts  oidc.strategy.ts
src/modules/business/community/: community.controller.ts  community.module.ts  (+1 more)
src/modules/health/: health.controller.ts
src/modules/oidc/: oidc.module.ts  oidc.service.ts
src/modules/supernode/: community.entity.ts  supernode.controller.ts  supernode.module.ts  supernode.service.ts
src/modules/user/: user.controller.ts  user.entity.ts  user.initialize.ts  user.module.ts  user.service.ts
src/utils/: access-log.util.ts  config.util.ts  express.extend.d.ts  logger.util.ts  native.util.ts  pagination.util.ts  type.util.ts
test/: app.e2e-spec.ts  jest-e2e.json
(+30 files in other folders)
